--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-		<groupId>com.ikilun</groupId>
-		<artifactId>ikilun-web-pom</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
-  <groupId>com.ikilun</groupId>
-  <artifactId>ikilun-web-commons</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>ikilun-web-commons</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-		
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.ikilun</groupId>
+	<artifactId>ikilun-web-commons</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>ikilun-web-commons</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+
 	</properties>
-  <dependencies>
-  </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>8.5.14</version>
+		</dependency>
+	</dependencies>
 </project>
